<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_name" />

            <EditText
                android:id="@+id/edit_product_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:hint="@string/product_name"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                style="@style/CategoryStyle"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/picture" />

                <Button
                    android:layout_marginTop="16dp"
                    android:id="@+id/edit_product_picture_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/add_picture" />
            </LinearLayout>

            <ImageView
                android:id="@+id/edit_product_picture_view"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="150dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_quantity" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/edit_product_quantity"
                    android:layout_width="0dp"
                    android:text="0"
                    android:layout_weight="3"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/edit_quantity_plus"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/product_plus" />

                <EditText
                    android:id="@+id/edit_quantity_variation"
                    android:inputType="number"
                    android:text="1"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="variation" />

                <Button
                    android:id="@+id/edit_quantity_minus"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/product_minus" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_supplier" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_product_supplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:inputType="phone"
                    android:id="@+id/edit_supplier_tel"
                    android:hint="@string/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_price" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/dollar"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edit_product_price"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/sales_times" />

            <TextView
                android:id="@+id/edit_product_times"
                android:text="0"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />
        </LinearLayout>

            <Button
                android:layout_marginTop="32dp"
                android:id="@+id/edit_order"
                android:text="@string/order"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>