<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingRight="16dp">

            <TextView
                android:textColor="@color/colorOrange"
                style="@style/ListTextStyle"
                android:layout_weight="3"
                android:text="@string/product_name" />

            <TextView
                android:textColor="@color/colorOrange"
                style="@style/ListTextStyle"
                android:layout_weight="3"
                android:text="@string/product_quantity" />

            <TextView
                android:textColor="@color/colorOrange"
                style="@style/ListTextStyle"
                android:layout_weight="2"
                android:text="@string/product_price" />

            <TextView
                android:textColor="@color/colorOrange"
                android:layout_weight="2"
                style="@style/ListTextStyle"
                android:text="@string/sales_times" />
            <TextView
                android:textColor="@color/colorOrange"
                android:layout_weight="2"
                style="@style/ListTextStyle" />

        </LinearLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.gyh.inventoryapp.MainActivity" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_view_title_text"
        android:layout_centerInParent="true" />
</RelativeLayout>